--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
-static/* linguist-vendored
+special-vendored-path/* linguist-vendored
+jquery.js linguist-vendored=false
 # In general, use LF for text
 * text eol=lf
 
