--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 * linguist-vendored
 *.bat linguist-vendored=false
-*.rb linguist-language=Java
+*.bat linguist-language=Java
 # In general, use LF for text
 * text eol=lf
 
